--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,3 +15,30 @@ body{
 .rotate-logo {
   animation: rotateAnimation 5s linear infinite;
 }
+/* Default logo size */
+.logo-img {
+  width: 100px;  /* Adjust this value as needed */
+  height: auto;
+}
+
+/* Adjust for screens larger than 640px (small screens and up) */
+@media (min-width: 640px) {
+  .logo-img {
+    width: 150px;  /* Adjust this value as needed */
+  }
+}
+
+/* Adjust for screens larger than 768px (medium screens and up) */
+@media (min-width: 768px) {
+  .logo-img {
+    width: 50px;  /* Adjust this value as needed */
+  }
+}
+
+/* Adjust for screens larger than 1024px (large screens and up) */
+@media (min-width: 1024px) {
+  .logo-img {
+    width: 250px;  /* Adjust this value as needed */
+  }
+}
+
